# SEUIF97

./: .gitignore  CMakeLists.txt  Introduction_SEUIF97.ipynb  LICENSE  Python使用SEUIF97.txt  README.md  SEUIF97加载宏.doc  SEUIF97物性列表.doc  Windows平台下Python使用SEUIF97.txt  makefile  setup.py
.ipynb_checkpoints/: Introduction_SEUIF97-checkpoint.ipynb
DemoSEUIF97/: SEUIF97Demo.c  makefile  seuif97.h
ExcelVBA/: DEMO_SEUIF97.xlsm  README.md  SEUIF97.xlam  SEUIF97_Add-in.doc  Using_Excel_Add-in_Macro.md  demo_SEUIF97.xlsm  demo_addin_SEUIF97.xlsm
ExcelVBA64/: SEUIF97.xlam
Linux64/: Test_seuif97.py  Turbine.py  seuif97.h  seuif97.py  test_seuif97.c  turbine.py
MATLAB64/: README.md
PyRankine/: Node.py  README.md  boiler.py  condenser.py  pump.py  rankine.py  turbine.py
PyThermoCycle/: Node.py  NodeIF97.py  README.md  TestNode.py  boiler.py  condenser.py  pump.py  rankine.py  seuif97.py  turbine.py
Windows32/: DEMO_SEUIF97.xlsm  DEMO_SEUIF97_32.xlsm  SEUIF97.xlam  seuif97.h  seuif97.py  test_seuif97.c  test_seuif97.py
Windows64/: DEMO_SEUIF97.xlsm  Diagram_T-S.py  Diagram_T-S_SEU.py  SEUIF97.xlam  TEST_SEUIF97.xlsm  seuif97.py  test_seuif97.py  turbine.py
api/: SEUIF97.java  seuif97.bas  seuif97.cs  seuif97.f08  seuif97.h  seuif97.m  seuif97.mo  seuif97.py  seuif97.rs
demo-csharp/: demo_seuif97.cs
demo-fortran/: demo_fortran_module.f08  seuif97.f08
demo-gcc/: Turbine_H-S.cpp  demo.c  makefile-linux  makefile-win  seuif97.h
demo-java/: SEUIF97.java  demoseuif97.java  seuif97.java
demo-msvc/: README.md  demo.c
demo-python/: Diagram_H-S.py  Diagram_T-S.py  (+5 more)
(+170 files in other folders)
